--- a/index.html
+++ b/index.html
@@ -953,8 +953,8 @@
             </div>
           </div>
           <div class="right-col-form">
-            <form name="contact-1" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST"
-              data-netlify="true" data-form-id="form1">
+            <form name="contact" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST" netlify
+              data-form-id="form1">
               <div class="form-group form-1">
                 <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
                 <!-- for spam protect -->
@@ -1094,8 +1094,8 @@
                 <p>I'd love to hear from you. Fill out the form and I'll get back to you as soon as possible.</p>
               </div>
               <div class="btm">
-                <form name="contact-2" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST"
-                  data-netlify="true" data-form-id="form2">
+                <form name="contact" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST" netlify
+                  data-form-id="form2">
                   <div class="form-group form-1">
                     <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
                     <!-- spam -->
