--- a/projects.html
+++ b/projects.html
@@ -1115,8 +1115,8 @@
                 <p>I'd love to hear from you. Fill out the form and I'll get back to you as soon as possible.</p>
               </div>
               <div class="btm">
-                <form name="contact-2" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST"
-                  data-netlify="true" data-form-id="form3">
+                <form name="contact" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST" netlify
+                  data-form-id="form3">
                   <div class="form-group form-1">
                     <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
                     <!-- spam -->
