--- a/projects.html
+++ b/projects.html
@@ -78,10 +78,10 @@
     <section class="section-motto">
       <div class="container">
         <div class="motto-flex-box flex-center">
-          <div class="overflow-hidden">
+          <div class="overflow-hidden h-auto">
             <h1 class="project-hero-text-1">Design with <span><em>purpose</em></span>,</h1>
           </div>
-          <div class="overflow-hidden">
+          <div class="overflow-hidden h-auto">
             <h1 class="project-hero-text-2">Code with <span><em>passion</em></span>.</h1>
           </div>
           <div class="overflow-hidden">
