--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                   </ul>
                 </div>
                 <div class="demo-buttons">
-                  <a href="https://azure-roast.netlify.app/" target="_blank" class="btn-style">
+                  <a href="https://azure-roast.vercel.app/" target="_blank" class="btn-style">
                     Live Demo
                   </a>
                   <a href="https://github.com/hridaySr10/Azure-Roast-fully-responsive-website" target="_blank"
@@ -527,12 +527,13 @@
                   </ul>
                 </div>
                 <div class="demo-buttons">
-                  <a href="https://www.figma.com/proto/WA8vpiPJFUW4FmhACp6Wey/sunglass-website?node-id=64-66&t=3BW8S07z3UO5NMZ9-1"
-                    class="btn-style">View
-                    Prototype</a>
-                  <button class="btn-style btn-outline open-modal" data-video="images/project/modal-video/video-1.mp4"
+                  <button class="btn-style  open-modal" data-video="images/project/modal-video/video-1.mp4"
                     data-prototype="https://www.figma.com/proto/WA8vpiPJFUW4FmhACp6Wey/sunglass-website?node-id=64-66&t=3BW8S07z3UO5NMZ9-1">Preview
                     Demo</button>
+                  <a href="https://www.figma.com/proto/WA8vpiPJFUW4FmhACp6Wey/sunglass-website?node-id=64-66&t=3BW8S07z3UO5NMZ9-1"
+                    class="btn-style btn-outline">View
+                    Prototype</a>
+
 
                 </div>
               </div>
@@ -563,7 +564,7 @@
                   </ul>
                 </div>
                 <div class="demo-buttons">
-                  <a href="https://effervescent-entremet-b87caa.netlify.app/" class="btn-style">
+                  <a href="https://hotel-hari.vercel.app/" class="btn-style">
                     Live Demo
                   </a>
                   <a href="https://github.com/hridaySr10/Hotel-Hari" target="_blank" class="btn-style btn-outline">View
@@ -596,13 +597,12 @@
                   </ul>
                 </div>
                 <div class="demo-buttons">
-                  <a href="https://www.figma.com/proto/WcjpByTYk8yfLR2dIe8SAC/HealthMate?node-id=39-480&t=lgovo2aHXPtVT0Oa-1"
-                    class="btn-style">View
-                    Prototype</a>
-                  <button class="btn-style btn-outline open-modal" data-video="images/project/modal-video/video-5.mp4"
+                  <button class="btn-style  open-modal" data-video="images/project/modal-video/video-5.mp4"
                     data-prototype="https://www.figma.com/proto/WcjpByTYk8yfLR2dIe8SAC/HealthMate?node-id=39-480&t=lgovo2aHXPtVT0Oa-1">Preview
                     Demo</button>
-
+                  <a href="https://www.figma.com/proto/WcjpByTYk8yfLR2dIe8SAC/HealthMate?node-id=39-480&t=lgovo2aHXPtVT0Oa-1"
+                    class="btn-style btn-outline">View
+                    Prototype</a>
                 </div>
               </div>
             </div>
