--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
         <div class="btm-row">
           <nav class="mob-nav">
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="index.html#about">About</a></li>
               <li><a href="index.html#services">Services</a></li>
               <li><a class="navLi-active" href="projects.html">Projects</a></li>
@@ -1183,5 +1183,6 @@
   <script src="script/common.js" defer></script>
   <script src="script/project.js" defer></script>
 </body>
+
 
 </html>
