--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="The official portfolio of Hriday, a professional web designer and developer based in India. Discover a collection of modern, responsive and user-friendly websites.">
+  <!-- facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hriday-sarkar.vercel.app/">
+  <meta property="og:title" content="Hriday Sarkar | Web Designer & Developer">
+  <meta property="og:description"
+    content="The official portfolio of Hriday, a professional web designer and developer based in India. Discover a collection of modern, responsive and user-friendly websites.">
+  <meta property="og:image" content="https://hriday-sarkar.vercel.app/images/social-preview.webp">
+
+  <!-- twitter -->
+  <meta name="twitter:card" content="website">
+  <meta name="twitter:url" content="https://hriday-sarkar.vercel.app/">
+  <meta name="twitter:title" content="Hriday Sarkar | Web Designer & Developer">
+  <meta name="twitter:description"
+    content="The official portfolio of Hriday, a professional web designer and developer based in India. Discover a collection of modern, responsive and user-friendly websites.">
+  <meta name="twitter:image" content="https://hriday-sarkar.vercel.app/images/social-preview.webp">
+
   <title>Hriday-Portfolio</title>
   <link rel="shortcut icon" href="images/header/fav-icon.svg" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
