--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
             <li><a href="#services">Services</a></li>
           </ul>
           <div class="social footer-btm-slide-up">
-            <a href="https://github.com/hridaySr10"><i class="ri-github-line"></i></a>
+            <a href="https://github.com/hridaySr10?tab=repositories"><i class="ri-github-line"></i></a>
             <a
               href="https://www.linkedin.com/in/hriday-sarkar-1788ba354/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B5tWHqxUnReuv1j%2B1Qpn3pA%3D%3D"><i
                 class="ri-linkedin-box-line"></i></a>
@@ -1204,5 +1204,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></scr
   <script src="script/common.js" defer></script>
   <script src="script/main.js" defer></script>
 </body>
+
 
 </html>
