--- a/projects.html
+++ b/projects.html
@@ -1099,7 +1099,7 @@
             <li><a href="index.html#services">Services</a></li>
           </ul>
           <div class="social">
-            <a href="https://github.com/hridaySr10"><i class="ri-github-line"></i></a>
+            <a href="https://github.com/hridaySr10?tab=repositories"><i class="ri-github-line"></i></a>
             <a
               href="https://www.linkedin.com/in/hriday-sarkar-1788ba354/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B5tWHqxUnReuv1j%2B1Qpn3pA%3D%3D"><i
                 class="ri-linkedin-box-line"></i></a>
@@ -1201,5 +1201,6 @@
   <script src="script/common.js" defer></script>
   <script src="script/project.js" defer></script>
 </body>
+
 
 </html>
