--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
 
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/media.css">
@@ -105,13 +104,15 @@
               digital experiences.</p>
           </div>
 
-          <div class="hero-btn overflow-hidden">
-            <button onclick="location.href='projects.html'" class="hero-btn-1 btn-style ">View My Projects</button>
-            <div>
-              <button class="hero-btn-2 btn-style btn-outline get-in-touch-btn">Let’s Collaborate</button>
+          <div class="overflow-hidden h-auto w-100">
+            <div class="hero-btn overflow-hidden">
+              <button onclick="location.href='projects.html'" class="hero-btn-1 btn-style ">View My Projects</button>
+              <div>
+                <button class="hero-btn-2 btn-style btn-outline get-in-touch-btn">Let’s Collaborate</button>
+              </div>
             </div>
-
           </div>
+
         </div>
         <div class="hero-img flex-center">
           <!-- <div class="blur-circle"></div> -->
@@ -206,8 +207,6 @@
             </div>
           </div>
           <div class="skill-info">
-            <!-- <div class="info">
-        </div> -->
           </div>
         </div>
         <div class="skill-accordion">
@@ -231,8 +230,8 @@
                       Development course at <span class="about-me-span">Moople Institute of Design and Animation</span>,
                       where I honed my skills in building responsive and accessible digital experiences.</p>
                     <p>I stay active on LinkedIn and GitHub to share my work and learn from the community. Outside of
-                      coding, I enjoy <span class="about-me-span">watching Dr.Vivek Bindra videos on business</span>,
-                      <span class="about-me-span">physical activity</span> and <span class="about-me-span">exploring new
+                      coding, I enjoy Watching <span class="about-me-span">business case studies and motivational
+                        content</span> for professional growth and <span class="about-me-span">exploring new
                         places</span>, which keep me creative and energized.
                     </p>
                   </div>
@@ -404,7 +403,9 @@
 
         </div>
       </div>
-
+      <div class="resume-btn w-100 h-auto flex-center overflow-hidden">
+        <a href="Resume-Hriday-Sarkar.pdf" download="Resume_Hriday_Sarkar.pdf" class="btn-style ">Download Resume</a>
+      </div>
     </section>
     <!-- ========== End skill section ========== -->
 
@@ -493,6 +494,7 @@
                 <div class="build-tools">
                   <h6>Build with:</h6>
                   <ul>
+                    <li>Figma</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
@@ -525,7 +527,7 @@
             <div class="text-block" data-image="project-image2">
               <div class="project-text-grid-box">
                 <h4>EYEORA: Wear Your Vision</h4>
-                <p>A e-commerce site that offers stylish glasses and sunglasses with frame
+                <p>An e-commerce site that offers stylish glasses and sunglasses with frame
                   options.
                 </p>
                 <div class="build-tools">
@@ -971,8 +973,11 @@
             </div>
           </div>
           <div class="right-col-form">
-            <form name="contact" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST"
-              data-netlify="true" data-form-id="form1">
+            <form class="contact-form" method="POST" action="https://api.web3forms.com/submit"
+              onsubmit="handleFormSubmit(event)" id="form">
+              <input type="hidden" name="access_key" value="9e19eabd-22cf-4de6-aa05-505b3aac4b21">
+              <input type="hidden" name="redirect" value="https://hriday-sarkar.vercel.app/thank-you.html">
+
               <div class="form-group form-1">
                 <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
                 <!-- for spam protect -->
@@ -996,13 +1001,13 @@
               <div class="form-group form-3">
                 <textarea name="message" placeholder="Your message" class="form-message"></textarea>
               </div>
+
               <div class="modal-btn-box w-100 flex-center justify-content-start">
-                <button type="submit" class="btn-style">Let’s Connect</button>
+                <button type="submit" class="btn-style">Let’s
+                  Connect</button>
               </div>
             </form>
-            <div class="gif-container" data-form-id="form1">
-              <img src="images/icons/Success.gif" alt="Success gif">
-            </div>
+
           </div>
 
         </div>
@@ -1071,9 +1076,11 @@
             challenges. <span>Let’s
               create
               something meaningful together.</span></p>
-          <div class="footer-btn w-100 flex-center">
-            <button class="btn-style btn-outline get-in-touch-btn">Let’s Work
+          <div class="footer-btn w-100 flex-center gap-3">
+            <button class="btn-style get-in-touch-btn">Let’s Work
               Together</button>
+            <a href="Resume-Hriday-Sarkar.pdf" download="Resume_Hriday_Sarkar.pdf"
+              class="btn-style btn-outline">Download Resume</a>
           </div>
 
 
@@ -1112,8 +1119,12 @@
                 <p>I'd love to hear from you. Fill out the form and I'll get back to you as soon as possible.</p>
               </div>
               <div class="btm">
-                <form name="contact" class="contact-form" onsubmit="handleFormSubmit(event)" method="POST"
-                  data-netlify="true" data-form-id="form2">
+                <form class="contact-form" method="POST" action="https://api.web3forms.com/submit"
+                  onsubmit="handleFormSubmit(event)" id="form">
+                  <input type="hidden" name="access_key" value="9e19eabd-22cf-4de6-aa05-505b3aac4b21">
+                  <!-- <input type="hidden" name="redirect" value="http://127.0.0.1:5500/thank-you.html"> -->
+                  <input type="hidden" name="redirect" value="https://hriday-sarkar.vercel.app/thank-you.html">
+
                   <div class="form-group form-1">
                     <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
                     <!-- spam -->
@@ -1192,18 +1203,14 @@
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.8.1/dist/vanilla-tilt.min.js"></script>
   <script src="
 https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script/common.js" defer></script>
   <script src="script/main.js" defer></script>
 </body>
-
 
 </html>
