--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <nav class="desktop-nav" id="navbar-example2">
         <ul>
           <li><a class="navLi-active" href="#">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
       <div class="nav-btn">
@@ -71,9 +71,9 @@
           <nav class="mob-nav">
             <ul>
               <li><a class="navLi-active" href="#">Home</a></li>
+              <li><a href="projects.html">Projects</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#services">Services</a></li>
-              <li><a href="projects.html">Projects</a></li>
             </ul>
           </nav>
 
@@ -976,7 +976,7 @@
             <form class="contact-form" method="POST" action="https://api.web3forms.com/submit"
               onsubmit="handleFormSubmit(event)" id="form">
               <input type="hidden" name="access_key" value="9e19eabd-22cf-4de6-aa05-505b3aac4b21">
-              <input type="hidden" name="redirect" value="https://hriday-sarkar.vercel.app/thank-you.html">
+              <input type="hidden" name="redirect" value="http://127.0.0.1:5500/thank-you.html">
 
               <div class="form-group form-1">
                 <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
