--- a/projects.html
+++ b/projects.html
@@ -43,9 +43,9 @@
       <nav class="desktop-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a class="navLi-active" href="projects.html">Projects</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#services">Services</a></li>
-          <li><a class="navLi-active" href="projects.html">Projects</a></li>
         </ul>
       </nav>
       <div class="nav-btn">
@@ -70,9 +70,9 @@
           <nav class="mob-nav">
             <ul>
               <li><a href="index.html">Home</a></li>
+              <li><a class="navLi-active" href="projects.html">Projects</a></li>
               <li><a href="index.html#about">About</a></li>
               <li><a href="index.html#services">Services</a></li>
-              <li><a class="navLi-active" href="projects.html">Projects</a></li>
             </ul>
           </nav>
 
@@ -606,12 +606,11 @@
               </div>
 
               <!-- pagination-tabs all project -->
-
               <div class="btm-pagination nav nav-pills flex-center" role="tablist">
 
                 <!-- inner-tab-1 -->
-                <button class="btn-style btn-outline active pagination-tab pagination-tab-active" data-bs-toggle="pill"
-                  data-bs-target="#project-all-inner-page-1" role="tab" aria-selected="true">
+                <button class="btn-style btn-outline active pagination-tab pagination-all-tab-active"
+                  data-bs-toggle="pill" data-bs-target="#project-all-inner-page-1" role="tab" aria-selected="true">
                   1
                 </button>
                 <!-- inner-tab-2 -->
