--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
             <form class="contact-form" method="POST" action="https://api.web3forms.com/submit"
               onsubmit="handleFormSubmit(event)" id="form">
               <input type="hidden" name="access_key" value="9e19eabd-22cf-4de6-aa05-505b3aac4b21">
-              <input type="hidden" name="redirect" value="http://127.0.0.1:5500/thank-you.html">
+              <input type="hidden" name="redirect" value="https://hriday-sarkar.vercel.app/thank-you.html">
 
               <div class="form-group form-1">
                 <input type="text" placeholder="Your name" name="name" autocomplete="off" class="form-name">
@@ -1212,5 +1212,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></scr
   <script src="script/common.js" defer></script>
   <script src="script/main.js" defer></script>
 </body>
+
 
 </html>
