--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
             </div>
           </div>
         </div>
-        <div class="btn-box showall-project-btn flex-center w-100 h-auto">
-          <a href="projects.html" class="btn-style gallery-btn">View All Projects </a>
+        <div class="btn-box showall-project-btn flex-center w-100 h-auto gallery-btn">
+          <a href="projects.html" class="btn-style">View All Projects </a>
         </div>
         <!-- mob view -->
         <div class="project-grid-box-mob position-relative">
@@ -1215,3 +1215,4 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></scr
 
 
 </html>
+
