--- a/projects.html
+++ b/projects.html
@@ -314,11 +314,11 @@
                         <img src="images/project/recently completed/project-2.webp" alt="my project cover image">
                       </div>
                       <div class="project-info">
-                        <h6>Essentio – Robotic Vacuum Cleanerson
+                        <h6>Nestora – Premium Real Estate Platform
                         </h6>
-                        <p>A responsive website for smart home cleaning solutions, featuring AI-powered robotic vacuums
-                          with
-                          effortless navigation and app control for spotless homes.</p>
+                        <p>A platform that connect buyers and sellers with modern luxury homes in prime locations, offering
+                    verified listings, and personalized guidance for seamless property decisions.
+                  </p>
                         <div class="tools-used flex-center w-100">
                           <p>Built With:</p>
                           <ul class="flex-center w-100">
@@ -331,9 +331,9 @@
                           </ul>
                         </div>
                         <div class="project-btns flex-center w-100 gap-3">
-                          <a href="https://nestora-rho.vercel.app/" class="btn-style">Live
+                          <a href="https://nestora-real-estate.vercel.app/about.html" class="btn-style">Live
                             Demo</a>
-                          <a href="https://github.com/hridaySr10/nestora.git" class="btn-style btn-outline">Preview
+                          <a href="https://github.com/hridaySr10/nestora-real-estate" class="btn-style btn-outline">Preview
                             Code</a>
                         </div>
                       </div>
@@ -686,9 +686,9 @@
                     </ul>
                   </div>
                   <div class="project-btns flex-center w-100 gap-3">
-                    <a href="https://nestora-rho.vercel.app/" class="btn-style">Live
+                    <a href="https://nestora-real-estate.vercel.app/" class="btn-style">Live
                       Demo</a>
-                    <a href="https://github.com/hridaySr10/nestora.git" class="btn-style btn-outline">Preview Code</a>
+                    <a href="https://github.com/hridaySr10/nestora-real-estate" class="btn-style btn-outline">Preview Code</a>
                   </div>
                 </div>
                 <div class="ribbon">Responsive Website</div>
@@ -1357,5 +1357,6 @@
   <script src="script/common.js" defer></script>
   <script src="script/project.js" defer></script>
 </body>
+
 
 </html>
